# ffmpeg-go-server

./: .travis.yml  Makefile  README.md
docs/: build.md  index.md
filters/ifade/: CMakeLists.txt  Makefile  build.sh  copy.c  copy.h
go/: go.mod  main.go
go/web/: interface.go  server.go
go/web/avfilter/: ifade.go
